# shovel

./: .gitignore  README.md  docker-compose.yml  example.env
.github/workflows/: docker.yml
grafana/: Dockerfile  entrypoint.sh
grafana/dashboards/: home.json  home.json.license  suricata.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: sql.yml
suricata/: Cargo.toml  Dockerfile  entrypoint.sh  suricata-tcp-payload-sqlite-output.lua  suricata-udp-payload-sqlite-output.lua
suricata/rules/: suricata.rules
suricata/suricata-eve-sql-output/: Cargo.toml
suricata/suricata-eve-sql-output/src/: database.rs  ffi.rs  lib.rs  schema.sql
suricata/suricata-eve-sqlite-output/: Cargo.toml
suricata/suricata-eve-sqlite-output/src/: database.rs  ffi.rs  lib.rs
suricata/suricata-filedata-sql-output/: Cargo.toml
suricata/suricata-filedata-sql-output/src/: database.rs  ffi.rs  lib.rs
suricata/suricata-filedata-sqlite-output/: Cargo.toml
suricata/suricata-filedata-sqlite-output/src/: database.rs  ffi.rs  lib.rs
suricata/suricata-payload-sqlite-output/: Cargo.toml
suricata/suricata-payload-sqlite-output/src/: database.rs  ffi.rs  lib.rs
suricata/suricata-rawdata-sql-output/: Cargo.toml
suricata/suricata-rawdata-sql-output/src/: database.rs  lib.rs
suricata/suricata-rawdata-sqlite-output/: Cargo.toml
suricata/suricata-rawdata-sqlite-output/src/: database.rs  lib.rs
webapp/: Dockerfile  main.py  pcap.py
webapp/static/js/: api.js  (+2 more)
webapp/templates/: index.html.jinja2  raw-replay-socket.py.jinja2  raw-replay.py.jinja2
(+1 files in other folders)
