# Copyright (C) 2026  A. Iooss
# SPDX-License-Identifier: CC0-1.0

[package]
name = "suricata-payload-sqlite-output"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "payload_sqlite_output"

[dependencies]
env_logger = { version = "0.11.5", default-features = false }
log = "0.4.22"
rusqlite = { version = "0.39.0", features = ["bundled"] }
suricata-sys = "8.0.4"
